| Bug #5999 | Typo in code, wrong config variable naming | ||
|---|---|---|---|
| Submitted: | 9 Oct 2004 5:08 | Modified: | 22 Oct 2004 8:23 |
| Reporter: | Arjen Lentz | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0 | OS: | Any (any) |
| Assigned to: | Ramil Kalimullin | CPU Architecture: | Any |
[9 Oct 2004 19:08]
MySQL Verification Team
Thank you for the bug report.
[22 Oct 2004 8:23]
Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: Typo, "incrememt" instead of "increment" in recently committed 5.0 code libmysqld/set_var.cc: {"auto_incrememt_increment", (char*) &sys_auto_increment_increment, SHOW_SYS}, mysql-test/r/rpl_auto_increment.result: auto_incrememt_increment 100 sql/set_var.cc: {"auto_incrememt_increment", (char*) &sys_auto_increment_increment, SHOW_SYS}, How to repeat: grep -i -r incrememt ~/mysql-5.0/* Suggested fix: Fix typo in the code and tests.