A fix (bug #5999 Typo in code, wrong config variable naming).